# rsync_backup

./: CMakeLists.txt  config.txt  rsync_backup.code-workspace
src/: CMakeLists.txt  main.cpp
